[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/dfdChasquilla.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 102
outline_size = 12
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 544.0
margin_bottom = 400.0
custom_constants/separation = 55
alignment = 1

[node name="Logo" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 424.0
margin_bottom = 139.0
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "HUASOHUER"
align = 1

[node name="MenuOptions" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 424.0
margin_bottom = 283.0
custom_constants/separation = 25
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/MenuOptions"]
margin_right = 424.0
margin_bottom = 32.0
focus_neighbour_right = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Exit")
focus_next = NodePath("../Exit")
theme = ExtResource( 2 )
text = "Start!"

[node name="Exit" type="Button" parent="VBoxContainer/MenuOptions"]
margin_top = 57.0
margin_right = 424.0
margin_bottom = 89.0
focus_neighbour_left = NodePath("../Start")
focus_neighbour_top = NodePath("../Start")
focus_previous = NodePath("../Start")
theme = ExtResource( 2 )
text = "Exit"
[connection signal="pressed" from="VBoxContainer/MenuOptions/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuOptions/Exit" to="." method="_on_Exit_pressed"]
